--- a/main.html
+++ b/main.html
@@ -7,8 +7,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sora:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/style/style.css">
+    <link rel="icon" href="./assets/img/icon.ico">
 
-    <title>Document</title>
+    <title>PartyTime | Offical</title>
 </head>
 <body>
     <header>
@@ -49,15 +50,24 @@
                     <button class="btn op s-3">SEE HOW?</button>
                     <div class="hero__text--statistic">
                         <div class="statistic op-d s-1">
-                            <h2>32K+</h2>
+                            <div class="numb-count">
+                                <h2>32</h2>
+                                <pre>K+</pre>
+                            </div>
                             <p>Party</p>
                         </div>
                         <div class="statistic op-d s-2">
-                            <h2>32K+</h2>
+                            <div class="numb-count">
+                                <h2>54</h2>
+                                <pre>K+</pre>
+                            </div>
                             <p>Events</p>
                         </div>
                         <div class="statistic op-d s-3">
-                            <h2>32K+</h2>
+                            <div class="numb-count">
+                                <h2>8</h2>
+                                <pre>K+</pre>
+                            </div>
                             <p>Weddings</p>
                         </div>
                     </div>
@@ -125,9 +135,152 @@
             </div>
         </div>
     </section>
-    <section>
-
+    <section class="packages--section">
+        <div class="container">
+            <div class="section--title">
+                <h2 class="op s-1">Packages</h2>
+                <p class="op s-2">Lorem ipsum dolor sit amet, consectetur dolore adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="packages">
+                <div class="package op s-3">
+                    <div class="package__title">
+                        <h4>Bronza</h4>
+                    </div>
+                    <div class="package__paragraph">
+                            <ul>
+                                <li>Xona bezaklari - sharlar, bannerlar</li>
+                                <li>Stol bezaklari – markazdagi gullar, sovg'alar 
+                                </li>
+                                <li>DJ hizmati </li>
+                                <li>Sovuq taomlar</li>
+                            </ul>
+                    </div>
+                    <div class="package__btnyutra">
+                        <button class="btn">View Work <img src="./assets/img/arrow-up-right.svg" alt="" srcset=""></button>
+                    </div>
+                </div>
+                <div class="package pc-mid op s-2">
+                    <div class="package__title">
+                        <h4>Kumush</h4>
+                    </div>
+                    <div class="package__paragraph">
+                            <ul>
+                                <li>Xona bezaklari - sharlar, bannerlar</li>
+                                <li>Stol bezaklari – markazdagi gullar, sovg'alar 
+                                </li>
+                                <li>DJ hizmati </li>
+                                <li>Sovuq taomlar</li>
+                            </ul>
+                    </div>
+                    <div class="package__btnyutra">
+                        <button class="btn">View Work <img src="./assets/img/arrow-up-right.svg" alt="" srcset=""></button>
+                    </div>
+                </div>
+                <div class="package op s-1">
+                    <div class="package__title">
+                        <h4>Oltin</h4>
+                    </div>
+                    <div class="package__paragraph">
+                            <ul>
+                                <li>Xona bezaklari - sharlar, bannerlar</li>
+                                <li>Stol bezaklari – markazdagi gullar, sovg'alar 
+                                </li>
+                                <li>DJ hizmati </li>
+                                <li>Sovuq taomlar</li>
+                            </ul>
+                    </div>
+                    <div class="package__btnyutra">
+                        <button class="btn">View Work <img src="./assets/img/arrow-up-right.svg" alt="" srcset=""></button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
+    <section class="lists--section">
+        <div class="container">
+            <div class="section--title">
+                <h2 class="op s-1">Trending this week</h2>
+                <p class="op s-2">Lorem ipsum dolor sit amet, consectetur dolore adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="lists">
+                <div class="lists__left">
+                    <div class="list op-d">
+                        <div class="list__head">
+                            <div class="list__head--txt">
+                                <h5>Tematik tadbirlar</h5>
+                                <pre>Golden Flower</pre>
+                            </div>
+                            <div class="list__head--btn">
+                                <a href="#">2.3 ETH</a>
+                            </div>
+                        </div>
+                        <div class="list__img">
+                            <img src="./assets/img/img_1.jpg" alt="" srcset="">
+                        </div>
+                    </div>
+                    <div class="list op-d">
+                        <div class="list__head">
+                            <div class="list__head--txt">
+                                <h5>Maxsus bayramlar</h5>
+                                <pre>Golden Flower</pre>
+                            </div>
+                            <div class="list__head--btn">
+                                <a href="#">2.3 ETH</a>
+                            </div>
+                        </div>
+                        <div class="list__img">
+                            <img src="./assets/img/img_2.jpg" alt="" srcset="">
+                        </div>
+                    </div>
+                </div>
+                <div class="lists__right">
+                    <div class="list op-d">
+                        <div class="list__head">
+                            <div class="list__head--txt">
+                                <h5>Chodir bazmlar</h5>
+                                <pre>Golden Flower</pre>
+                            </div>
+                            <div class="list__head--btn">
+                                <a href="#">2.3 ETH</a>
+                            </div>
+                        </div>
+                        <div class="list__img">
+                            <img src="./assets/img/img_3.jpg" alt="" srcset="">
+                        </div>
+                    </div>
+                    <div class="list op-d">
+                        <div class="list__head">
+                            <div class="list__head--txt">
+                                <h5>O’yin kulgu tadbirlari</h5>
+                                <pre>Golden Flower</pre>
+                            </div>
+                            <div class="list__head--btn">
+                                <a href="#">2.3 ETH</a>
+                            </div>
+                        </div>
+                        <div class="list__img">
+                            <img src="./assets/img/img_4.jpg" alt="" srcset="">
+                        </div>
+                    </div>
+                    <div class="list op-d">
+                        <div class="list__head">
+                            <div class="list__head--txt">
+                                <h5>Boshqa tadbirlar</h5>
+                                <pre>Golden Flower</pre>
+                            </div>
+                            <div class="list__head--btn">
+                                <a href="#">2.3 ETH</a>
+                            </div>
+                        </div>
+                        <div class="list__img">
+                            <img src="./assets/img/img_5.jpg" alt="" srcset="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="./assets/js/app.js"></script>
 </body>
 </html>
