--- a/main.html
+++ b/main.html
@@ -12,6 +12,9 @@
     <title>PartyTime | Offical</title>
 </head>
 <body>
+    <button id="scrollToTopBtn">
+        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve" fill-rule="evenodd"><g><path d="m12 9.414-6.293 6.293a1 1 0 0 1-1.414-1.414l7-7a.999.999 0 0 1 1.414 0l7 7a1 1 0 0 1-1.414 1.414z" fill="#ffffff" opacity="1" data-original="#000000"/></g></svg>
+    </button>
     <header>
         <nav class="nav--section">
             <div class="container">
