--- a/main.html
+++ b/main.html
@@ -283,7 +283,88 @@
             </div>
         </div>
     </section>
+    <section class="staffs--section">
+        <div class="container">
+            <div class="section--title title-staff">
+                <h2 class="op s-1">Popular Workers</h2>
+                <button class="btn">View<img src="./assets/img/arrow-up-right.svg" alt="" srcset=""></button>
+            </div>
+            <div class="staffs">
+                <div class="staff op-d s-1">
+                    <div class="staff__img">
+                        <img src="./assets/img/user_1.jpg" alt="">
+                    </div>
+                    <div class="staff__name">
+                        <h3>Ferhat Deniz</h3>
+                    </div>
+                </div>
+                <div class="staff op-d s-2">
+                    <div class="staff__img">
+                        <img src="./assets/img/user_2.jpg" alt="">
+                    </div>
+                    <div class="staff__name">
+                        <h3>Sebastian</h3>
+                    </div>
+                </div>
+                <div class="staff op-d s-3">
+                    <div class="staff__img">
+                        <img src="./assets/img/user_3.jpg" alt="">
+                    </div>
+                    <div class="staff__name">
+                        <h3>Javier Miranda</h3>
+                    </div>
+                </div>
+                <div class="staff op-d s-3">
+                    <div class="staff__img">
+                        <img src="./assets/img/user_4.jpg" alt="">
+                    </div>
+                    <div class="staff__name">
+                        <h3>Ericka Butler</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="conclusion--section">
+        <div class="container">
+            <div class="conclusion">
+                <div class="conclusion__img op-d s-1">
+                    <img src="./assets/img/conc.jpg" alt="">
+                </div>
+                <div class="conclusion__text op-d s-3">
+                    <h2>Join the community and get the best NFT collection</h2>
+                    <button class="btn--primary">Contact us</button>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="./assets/js/app.js"></script>
 </body>
+<footer>
+    <div class="container">
+        <div class="footer">
+            <div class="footer__top">
+                <div class="footer__top--logo">
+                    <img src="./assets/img/Logo.svg" alt="">
+                </div>
+                <div class="footer__top--navigation">
+                    <ul>
+                        <li><a href="#about">About us</a></li>
+                        <li><a href="#store">Store</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer__top--med">
+                    <a href=""><img src="./assets/img/inst.svg" alt="" srcset=""></a>
+                    <a href=""><img src="./assets/img/telegram.svg" alt="" srcset=""></a>
+                    <a href=""><img src="./assets/img/meta.svg" alt="" srcset=""></a>
+                </div>
+            </div>
+            <div class="footer__bottom">
+                <p>Privacy policy Copyright | @ Kartik Bansal 2022. | All Rights Reserved. Terms of service</p>
+            </div>
+        </div>
+    </div>
+</footer>
 </html>
