--- a/main.html
+++ b/main.html
@@ -24,9 +24,9 @@
                     </div>
                     <div class="nav__navigation">
                         <ul class="nav__list hideFlexNav">
-                            <li><a href="#about">About us</a></li>
-                            <li><a href="#store">Store</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><a href="#package">Packages</a></li>
+                            <li><a href="#lists">Trend deal</a></li>
+                            <li><a href="#footer">Contact</a></li>
                         </ul>
                         <button class="hideFlexNav">Connect Wallet</button>
                         <a onclick=showSidebar() class="humbergur--menu hamb--btn" href="#"><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="512" height="512" x="0" y="0" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512" xml:space="preserve"><g><path d="M128 102.4c0-14.138 11.462-25.6 25.6-25.6h332.8c14.138 0 25.6 11.462 25.6 25.6S500.538 128 486.4 128H153.6c-14.138 0-25.6-11.463-25.6-25.6zm358.4 128H25.6C11.462 230.4 0 241.863 0 256c0 14.138 11.462 25.6 25.6 25.6h460.8c14.138 0 25.6-11.462 25.6-25.6 0-14.137-11.462-25.6-25.6-25.6zm0 153.6H256c-14.137 0-25.6 11.462-25.6 25.6 0 14.137 11.463 25.6 25.6 25.6h230.4c14.138 0 25.6-11.463 25.6-25.6 0-14.138-11.462-25.6-25.6-25.6z" fill="#000000" opacity="1" data-original="#000000"/></g></svg></a>
@@ -34,9 +34,9 @@
                     <div class="nav__navigation--flexed">
                         <a onclick=hideSidebar() class="humbergur--menu" href="#"><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path fill="#000000" d="M18.807 6.607a1 1 0 0 0-1.414-1.414L12 10.586 6.607 5.193a1 1 0 1 0-1.414 1.414L10.586 12l-5.393 5.393a1 1 0 1 0 1.414 1.414L12 13.414l5.393 5.393a1 1 0 0 0 1.414-1.414L13.414 12z" opacity="1" data-original="#000000" class=""/></g></svg></a>
                         <ul class="nav__list">
-                            <li><a href="#about">About us</a></li>
-                            <li><a href="#store">Store</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><a href="#package">Packages</a></li>
+                            <li><a href="#lists">Trend deal</a></li>
+                            <li><a href="#footer">Contact</a></li>
                         </ul>
                         <button>Connect Wallet</button>
                     </div>
@@ -138,7 +138,7 @@
             </div>
         </div>
     </section>
-    <section class="packages--section">
+    <section id="package" class="packages--section">
         <div class="container">
             <div class="section--title">
                 <h2 class="op s-1">Packages</h2>
@@ -199,7 +199,7 @@
             </div>
         </div>
     </section>
-    <section class="lists--section">
+    <section id="lists" class="lists--section">
         <div class="container">
             <div class="section--title">
                 <h2 class="op s-1">Trending this week</h2>
@@ -350,9 +350,9 @@
                 </div>
                 <div class="footer__top--navigation">
                     <ul>
-                        <li><a href="#about">About us</a></li>
-                        <li><a href="#store">Store</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#package">Packages</a></li>
+                        <li><a href="#lists">Trend deal</a></li>
+                        <li><a href="#footer">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer__top--med">
