--- a/main.html
+++ b/main.html
@@ -332,7 +332,7 @@
                     <img src="./assets/img/conc.jpg" alt="">
                 </div>
                 <div class="conclusion__text op-d s-3">
-                    <h2>Join the community and get the best NFT collection</h2>
+                    <h2>Join the community and get the best PARTY memories!</h2>
                     <button class="btn--primary">Contact us</button>
                 </div>
             </div>
